--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,14 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.9.2</version>
         </dependency>
+
+        <!--Test dependencies-->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.10</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <properties>
