Improved logging output

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -2,4 +2,4 @@ log4j.rootLogger=DEBUG, STDOUT
 log4j.category.org.eclipse=WARN
 log4j.appender.STDOUT=org.apache.log4j.ConsoleAppender
 log4j.appender.STDOUT.layout=org.apache.log4j.PatternLayout
-log4j.appender.STDOUT.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
+log4j.appender.STDOUT.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss.SSS} ${LOG_LEVEL_PATTERN}--- [%t] %-40.40c (%4L) : %m%n${sys:LOG_EXCEPTION_CONVERSION_WORD}
